Add @SuppressWarnings annotations and refactor for improved clarity
- Annotated unused configurations and fields with `@SuppressWarnings` to avoid warnings.
- Refactored `getReceived` usage for better readability.
- Added comments in `TestRecordUuidKeyExtractor` for consistent key-checking logic.